# FastAPI_ConfZ_Demo

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: api.yml  db_dev.yml  db_prod.yml
fastapi_confz_demo/: app.py  config.py  db.py  main.py  models.py
tests/: test_all.py  test_main.py
