[tool.poetry]
name = "fastapi_confz_demo"
version = "1.0.0"
description = ""
authors = ["Silvan Melchior <silvan.melchior@zuehlke.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
# TODO: upgrade confz
confz = "^1.0.0"
sqlmodel = "^0.0.4"
requests = "^2.26.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
